--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,14 +55,23 @@ h1{
     padding: 0.8rem;
 }
 
+.city-btn,
 #search-btn {
     background-color: var(--sand);
     color: var(--dark);
 }
 
+.city-btn:hover,
 #search-btn:hover {
     background-color: var(--light-dark);
     color: var(--sand);
+}
+
+.city-btn {
+    width: 100%;
+    padding: 0.3rem;
+    margin-top: 0.4rem;
+    border-color: var(--light-dark);
 }
 
 #today {
